--- a/configuration/sms_pipeline_config.json
+++ b/configuration/sms_pipeline_config.json
@@ -32,7 +32,8 @@
         "csap_s08e02_activation",
         "csap_s08e03_activation",
         "csap_s08e03_break_activation",
-        "csap_s08e04_activation"
+        "csap_s08e04_activation",
+        "csap_s08e05_activation"
       ],
       "SurveyFlowNames": [
         "csap_s04_demog",
