--- a/configuration/sms_pipeline_config.json
+++ b/configuration/sms_pipeline_config.json
@@ -215,24 +215,52 @@
     "GenerateMogadishuThemeDistributionMaps": true,
 
     "TrafficLabels": [
-      {"StartDate": "2020-11-01T16:30+03:00", "EndDate": "2020-11-01T17:30+03:00", "Label": "E01 Ad"},
+      {"StartDate": "2020-11-01T16:30+03:00", "EndDate": "2020-11-01T18:30+03:00", "Label": "E01 Ad"},
       {"StartDate": "2020-11-05T14:30+03:00", "EndDate": "2020-11-05T15:30+03:00", "Label": "E01 Dalsan/Danan"},
       {"StartDate": "2020-11-05T15:00+03:00", "EndDate": "2020-11-05T16:00+03:00", "Label": "E01 Risala"},
       {"StartDate": "2020-11-05T11:30+03:00", "EndDate": "2020-11-05T12:30+03:00", "Label": "E01 Star"},
       {"StartDate": "2020-11-05T16:30+03:00", "EndDate": "2020-11-05T17:30+03:00", "Label": "E01 Mustaqbal"},
 
-      {"StartDate": "2020-11-08T16:30+03:00", "EndDate": "2020-11-08T17:30+03:00", "Label": "E02 Ad"},
+      {"StartDate": "2020-11-08T16:30+03:00", "EndDate": "2020-11-08T18:30+03:00", "Label": "E02 Ad"},
       {"StartDate": "2020-11-12T14:30+03:00", "EndDate": "2020-11-12T15:30+03:00", "Label": "E02 Dalsan/Danan"},
       {"StartDate": "2020-11-12T15:00+03:00", "EndDate": "2020-11-12T16:00+03:00", "Label": "E02 Risala"},
       {"StartDate": "2020-11-12T11:30+03:00", "EndDate": "2020-11-12T12:30+03:00", "Label": "E02 Star"},
       {"StartDate": "2020-11-12T16:30+03:00", "EndDate": "2020-11-12T17:30+03:00", "Label": "E02 Mustaqbal"},
 
-      {"StartDate": "2020-11-15T16:30+03:00", "EndDate": "2020-11-15T17:30+03:00", "Label": "E03 Ad"},
+      {"StartDate": "2020-11-15T16:30+03:00", "EndDate": "2020-11-15T18:30+03:00", "Label": "E03 Ad"},
       {"StartDate": "2020-11-18T16:30+03:00", "EndDate": "2020-11-18T17:30+03:00", "Label": "E03 Imaqal Ad"},
       {"StartDate": "2020-11-19T14:30+03:00", "EndDate": "2020-11-19T15:30+03:00", "Label": "E03 Dalsan/Danan"},
       {"StartDate": "2020-11-19T15:00+03:00", "EndDate": "2020-11-19T16:00+03:00", "Label": "E03 Risala"},
       {"StartDate": "2020-11-19T11:30+03:00", "EndDate": "2020-11-19T12:30+03:00", "Label": "E03 Star"},
-      {"StartDate": "2020-11-19T16:30+03:00", "EndDate": "2020-11-19T17:30+03:00", "Label": "E03 Mustaqbal"}
+      {"StartDate": "2020-11-19T16:30+03:00", "EndDate": "2020-11-19T17:30+03:00", "Label": "E03 Mustaqbal"},
+
+      {"StartDate": "2021-02-14T16:30+03:00", "EndDate": "2021-02-14T18:30+03:00", "Label": "E04 IBTCI/FCDO Ad"},
+      {"StartDate": "2021-02-16T16:30+03:00", "EndDate": "2021-02-16T18:30+03:00", "Label": "E04 JPLG/TIS+ Ad"},
+      {"StartDate": "2021-02-18T07:00+03:00", "EndDate": "2021-02-18T08:00+03:00", "Label": "E04 Risala"},
+      {"StartDate": "2021-02-18T11:00+03:00", "EndDate": "2021-02-18T12:00+03:00", "Label": "E04 Shabelle"},
+      {"StartDate": "2021-02-18T12:30+03:00", "EndDate": "2021-02-18T13:30+03:00", "Label": "E04 Dalsan"},
+      {"StartDate": "2021-02-18T14:30+03:00", "EndDate": "2021-02-18T15:30+03:00", "Label": "E04 Star"},
+      {"StartDate": "2021-02-18T17:00+03:00", "EndDate": "2021-02-18T18:00+03:00", "Label": "E04 Kulmiye"},
+      {"StartDate": "2021-02-18T19:30+03:00", "EndDate": "2021-02-18T20:30+03:00", "Label": "E04 Danan"},
+      {"StartDate": "2021-02-18T20:30+03:00", "EndDate": "2021-02-18T21:30+03:00", "Label": "E04 Gool"},
+
+      {"StartDate": "2021-02-21T16:30+03:00", "EndDate": "2021-02-21T18:30+03:00", "Label": "E05 Ad"},
+      {"StartDate": "2021-02-25T07:00+03:00", "EndDate": "2021-02-25T08:00+03:00", "Label": "E05 Risala/Warsan"},
+      {"StartDate": "2021-02-25T11:00+03:00", "EndDate": "2021-02-25T12:00+03:00", "Label": "E05 Shabelle"},
+      {"StartDate": "2021-02-25T12:00+03:00", "EndDate": "2021-02-25T13:30+03:00", "Label": "E05 Afgoye/Dalsan"},
+      {"StartDate": "2021-02-25T14:30+03:00", "EndDate": "2021-02-25T15:30+03:00", "Label": "E05 Star/Xudur"},
+      {"StartDate": "2021-02-25T16:30+03:00", "EndDate": "2021-02-25T18:00+03:00", "Label": "E05 KGS/Kulmiye"},
+      {"StartDate": "2021-02-25T19:30+03:00", "EndDate": "2021-02-25T20:30+03:00", "Label": "E05 Danan"},
+      {"StartDate": "2021-02-25T20:30+03:00", "EndDate": "2021-02-25T22:00+03:00", "Label": "E05 Gool/Warsan repeat/Xudur repeat/Afgoye repeat"},
+
+      {"StartDate": "2021-02-28T16:30+03:00", "EndDate": "2021-02-28T18:30+03:00", "Label": "E06 Ad"},
+      {"StartDate": "2021-03-04T07:00+03:00", "EndDate": "2021-03-04T08:00+03:00", "Label": "E06 Risala/Warsan"},
+      {"StartDate": "2021-03-04T11:00+03:00", "EndDate": "2021-03-04T12:00+03:00", "Label": "E06 Shabelle"},
+      {"StartDate": "2021-03-04T12:00+03:00", "EndDate": "2021-03-04T13:30+03:00", "Label": "E06 Afgoye/Dalsan"},
+      {"StartDate": "2021-03-04T14:30+03:00", "EndDate": "2021-03-04T15:30+03:00", "Label": "E06 Star/Xudur"},
+      {"StartDate": "2021-03-04T16:30+03:00", "EndDate": "2021-03-04T18:00+03:00", "Label": "E06 KGS/Kulmiye"},
+      {"StartDate": "2021-03-04T19:30+03:00", "EndDate": "2021-03-04T20:30+03:00", "Label": "E06 Danan"},
+      {"StartDate": "2021-03-04T20:30+03:00", "EndDate": "2021-03-04T22:00+03:00", "Label": "E06 Gool/Warsan repeat/Xudur repeat/Afgoye repeat"}
     ]
   },
   "DriveUpload": {
