Add explicit reference to Hage post that doesn't contain the Hage hastag

--- a/configuration/facebook_pipeline_config.json
+++ b/configuration/facebook_pipeline_config.json
@@ -136,9 +136,15 @@
         {"Name": "facebook_s08e04", "Search": {
           "Match": "#Hage", "StartDate": "2021-02-15T00:00+03:00", "EndDate": "2021-02-21T24:00+03:00"
         }},
-        {"Name": "facebook_s08e05", "Search": {
-          "Match": "#Hage", "StartDate": "2021-02-22T00:00+03:00", "EndDate": "2021-02-28T24:00+03:00"
-        }},
+        {
+          "Name": "facebook_s08e05",
+          "PostIDs": [
+            "325301151525528_764396714282634"
+          ],
+          "Search": {
+            "Match": "#Hage", "StartDate": "2021-02-22T00:00+03:00", "EndDate": "2021-02-28T24:00+03:00"
+          }
+        },
         {"Name": "facebook_s08e06", "Search": {
           "Match": "#Hage", "StartDate": "2021-03-01T00:00+03:00", "EndDate": "2021-03-07T24:00+03:00"
         }}
