--- a/configuration/facebook_pipeline_config.json
+++ b/configuration/facebook_pipeline_config.json
@@ -98,6 +98,18 @@
         }},
         {"Name": "facebook_s08e06_break_w03", "Search": {
           "Match": "#Hage", "StartDate": "2021-03-29T00:00+03:00", "EndDate": "2021-04-04T24:00+03:00"
+        }},
+        {"Name": "facebook_s08e06_break_w04", "Search": {
+          "Match": "#Hage", "StartDate": "2021-04-05T00:00+03:00", "EndDate": "2021-04-11T24:00+03:00"
+        }},
+        {"Name": "facebook_s08e06_break_w05", "Search": {
+          "Match": "#Hage", "StartDate": "2021-04-12T00:00+03:00", "EndDate": "2021-04-18T24:00+03:00"
+        }},
+        {"Name": "facebook_s08e06_break_w06", "Search": {
+          "Match": "#Hage", "StartDate": "2021-04-19T00:00+03:00", "EndDate": "2021-04-25T24:00+03:00"
+        }},
+        {"Name": "facebook_s08e06_break_w07", "Search": {
+          "Match": "#Hage", "StartDate": "2021-04-26T00:00+03:00", "EndDate": "2021-05-02T24:00+03:00"
         }}
       ]
     },
@@ -165,6 +177,18 @@
         }},
         {"Name": "facebook_s08e06_break_w03", "Search": {
           "Match": "#Hage", "StartDate": "2021-03-29T00:00+03:00", "EndDate": "2021-04-04T24:00+03:00"
+        }},
+        {"Name": "facebook_s08e06_break_w04", "Search": {
+          "Match": "#Hage", "StartDate": "2021-04-05T00:00+03:00", "EndDate": "2021-04-11T24:00+03:00"
+        }},
+        {"Name": "facebook_s08e06_break_w05", "Search": {
+          "Match": "#Hage", "StartDate": "2021-04-12T00:00+03:00", "EndDate": "2021-04-18T24:00+03:00"
+        }},
+        {"Name": "facebook_s08e06_break_w06", "Search": {
+          "Match": "#Hage", "StartDate": "2021-04-19T00:00+03:00", "EndDate": "2021-04-25T24:00+03:00"
+        }},
+        {"Name": "facebook_s08e06_break_w07", "Search": {
+          "Match": "#Hage", "StartDate": "2021-04-26T00:00+03:00", "EndDate": "2021-05-02T24:00+03:00"
         }}
       ]
     },
@@ -307,7 +331,25 @@
     {"SourceKey": "facebook_s08e06_break_w03.id", "PipelineKey": "facebook_s08e06_break_w03_comment_id"},
     {"SourceKey": "facebook_s08e06_break_w03.created_time", "PipelineKey": "sent_on"},
     {"SourceKey": "facebook_s08e06_break_w03.parent", "PipelineKey": "facebook_s08e06_break_w03_comment_reply_to_raw"},
-    {"SourceKey": "facebook_s08e06_break_w03.post", "PipelineKey": "facebook_s08e06_break_w03_post_raw"}
+    {"SourceKey": "facebook_s08e06_break_w03.post", "PipelineKey": "facebook_s08e06_break_w03_post_raw"},
+    
+    {"SourceKey": "facebook_s08e06_break_w04.message", "PipelineKey": "facebook_s08e06_break_w04_raw"},
+    {"SourceKey": "facebook_s08e06_break_w04.id", "PipelineKey": "facebook_s08e06_break_w04_comment_id"},
+    {"SourceKey": "facebook_s08e06_break_w04.created_time", "PipelineKey": "sent_on"},
+    {"SourceKey": "facebook_s08e06_break_w04.parent", "PipelineKey": "facebook_s08e06_break_w04_comment_reply_to_raw"},
+    {"SourceKey": "facebook_s08e06_break_w04.post", "PipelineKey": "facebook_s08e06_break_w04_post_raw"},
+    
+    {"SourceKey": "facebook_s08e06_break_w05.message", "PipelineKey": "facebook_s08e06_break_w05_raw"},
+    {"SourceKey": "facebook_s08e06_break_w05.id", "PipelineKey": "facebook_s08e06_break_w05_comment_id"},
+    {"SourceKey": "facebook_s08e06_break_w05.created_time", "PipelineKey": "sent_on"},
+    {"SourceKey": "facebook_s08e06_break_w05.parent", "PipelineKey": "facebook_s08e06_break_w05_comment_reply_to_raw"},
+    {"SourceKey": "facebook_s08e06_break_w05.post", "PipelineKey": "facebook_s08e06_break_w05_post_raw"},
+    
+    {"SourceKey": "facebook_s08e06_break_w06.message", "PipelineKey": "facebook_s08e06_break_w06_raw"},
+    {"SourceKey": "facebook_s08e06_break_w06.id", "PipelineKey": "facebook_s08e06_break_w06_comment_id"},
+    {"SourceKey": "facebook_s08e06_break_w06.created_time", "PipelineKey": "sent_on"},
+    {"SourceKey": "facebook_s08e06_break_w06.parent", "PipelineKey": "facebook_s08e06_break_w06_comment_reply_to_raw"},
+    {"SourceKey": "facebook_s08e06_break_w06.post", "PipelineKey": "facebook_s08e06_break_w06_post_raw"}
   ],
   "ProjectStartDate": "2000-01-01T00:00:00+03:00",
   "ProjectEndDate": "2100-01-01T00:00:00+03:00",
